Add scripts of adding files to modules.
Files in template_modules are modified so that the to-be-replaced variables
are warpped in "@ @".

--- a/template_module/CMake/itk-module-name-config-install.cmake.in
+++ b/template_module/CMake/itk-module-name-config-install.cmake.in
@@ -3,10 +3,10 @@ get_filename_component (_dir  "${CMAKE_CURRENT_LIST_FILE}" PATH)
 get_filename_component(_prefix "${_dir}/../../.." ABSOLUTE)
 
 #import the targets
-if(NOT TARGET itk-module-name)
-  include("${_prefix}/@itk-module-name-targets-install@")
+if(NOT TARGET @itk-module-name@)
+  include("${_prefix}/@@itk-module-name@-targets-install@")
 endif()
 
-set(itk-module-name_INCLUDE_DIRS "${_prefix}/include/itk-module-name-@version@")
+set(@itk-module-name@_INCLUDE_DIRS "${_prefix}/include/@itk-module-name@-@version@")
 
 
