--- a/template_module/CMake/itk-module-name-config-build.cmake.in
+++ b/template_module/CMake/itk-module-name-config-build.cmake.in
@@ -1,7 +1,7 @@
 #import the targets
-if(NOT TARGET itk-module-name)
-  include("@itk-module-name-targets-build@")
+if(NOT TARGET @itk-module-name@)
+  include("@@itk-module-name@-targets-build@")
 endif()
 
 #report other information
-set(itk-module-name_INCLUDE_DIRS "@itk-module-name_INCLUDE_DIRS@")
+set(@itk-module-name@_INCLUDE_DIRS "@@itk-module-name@_INCLUDE_DIRS@")
