ENH: itk-common pass the build.
Manifest files has been modified according to the build errors
(mostly are missing files).

--- a/templateModule/itk-common/CMakeLists.txt
+++ b/templateModule/itk-common/CMakeLists.txt
@@ -10,6 +10,7 @@ include(CMakeBackwardCompatibilityC)
 include(CMakeBackwardCompatibilityCXX)
 
 configure_file(src/itkConfigure.h.in itkConfigure.h)
+configure_file(src/itkFloatingPointExceptionsConfigure.h.in  itkFloatingPointExceptionsConfigure.h)
 
 set(itk-common_INCLUDE_DIRS
   ${itk-common_BINARY_DIR}
