ENH: Set up the test driver for modules.

--- a/templateModule/itk-template-module/test/CMakeLists.txt
+++ b/templateModule/itk-template-module/test/CMakeLists.txt
@@ -1,3 +1,9 @@
-add_executable(itkTemplateModuleTest itkTemplateModuleTest.cxx)
-target_link_libraries(itkTemplateModuleTest itk-template-module)
-add_test(NAME itkTemplateModuleTest COMMAND itkTemplateModuleTest)
+set(MODULE_TEST itk-module-name)
+create_test_sourcelist(Tests ${MODULE_TEST}CxxTest.cxx
+LIST_OF_CXX_FILES
+)
+add_executable(${MODULE_TEST}CxxTest ${Tests})
+
+target_link_libraries(${MODULE_TEST}CxxTest itk-module-name)
+
+include(itk-module-name-tests.cmake)
